syntax = "proto3";

package storage;

option go_package = "./proto;storage";
import "google/protobuf/struct.proto";

service Storage {
	rpc Call(CallRequest) returns (CallResponse) {}
	rpc ClientStream(stream ClientStreamRequest) returns (ClientStreamResponse) {}
	rpc ServerStream(ServerStreamRequest) returns (stream ServerStreamResponse) {}
	rpc BidiStream(stream BidiStreamRequest) returns (stream BidiStreamResponse) {}
	rpc Connect(ConnectRequest) returns (ConnectResponse) {}
	rpc ConnectCache(ConnectCacheRequest) returns (ConnectCacheResponse) {}
}

message CallRequest {
	string name = 1;
}

message CallResponse {
	string msg = 1;
}

message ClientStreamRequest {
	int64 stroke = 1;
}

message ClientStreamResponse {
	int64 count = 1;
}

message ServerStreamRequest {
	int64 count = 1;
}

message ServerStreamResponse {
	int64 count = 1;
}

message BidiStreamRequest {
	int64 stroke = 1;
}

message BidiStreamResponse {
	int64 stroke = 1;
}

message ConnectRequest{

}

message ConnectResponse {
	repeated google.protobuf.Struct datas = 1;
}

message ConnectCacheRequest {
	string key = 1;
}

message ConnectCacheResponse {
	repeated google.protobuf.Struct datas = 1;
}